First commited as before_47013_rev1